syntax = "proto3";

package Proto;

option go_package = "/gRPC";

message IncrementRequest{
  int32 value = 1;
  int32 requestID = 2;
  string clientID = 3;
}

message IncrementResponse{
  int32 value = 1;
}

message Ping{
  string clientID = 1;
}

message Empty{
}

service IncrementSystem{
  rpc Increment(IncrementRequest) returns (IncrementResponse){}
  rpc PingServer(Ping) returns (Empty){}
}